feat: complete java and axon task coverage